# wyn-pm

./: README.md  pyproject.toml
wyn_pm/: efficient_portfolio.py  stock_analyzer.py  trainer.py
